<resources>
    <string name="app_name">모두의구독</string>
    <string name="app_name_dev">모두의구독-개발</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--Menu item texts -->
    <string name="action_settings">설정</string>
    <string name="action_search">검색</string>
    <string name="action_cart">장바구니</string>
    <string name="action_notifications">알림</string>

    <string name="menu_item_1">카테고리</string>
    <string name="menu_item_2">검색</string>
    <string name="menu_item_3">홈</string>
    <string name="menu_item_4">마이페이지</string>
    <string name="menu_item_5">장바구니</string>

    <string name="my_profile">My Profile</string>
    <string name="my_rewards">선물함</string>
    <string name="my_orders">주문목록</string>
    <string name="my_cart">장바구니</string>
    <string name="my_wishlist">찜 목록</string>
    <!--<string name="my_account">계정정보</string>-->

    <string name="help_support">Help \u0026 Support</string>
    <string name="contact_us">Contact Us</string>
    <string name="terms_conditions">Terms \u0026 Conditions</string>
    <string name="help_center">Help Center</string>

    <string name="search_hint">검색</string>


    <!--Intro slider texts -->
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">다음</string>
    <string name="skip">건너뛰기</string>
    <string name="start">시작</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!
    </string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome
        slider -> clear data
    </string>
    <string name="play_again">Play Again</string>
    <string name="currency">\u20A9</string>

    <string name="login_google">구글계정으로 로그인</string>
    <string name="http_result_msg_error_e999">알수없는 오류</string>

    <string name="menu_update">Refresh Main Content</string>
    <string name="auto_login_prompt">자동로그인?</string>
    <string name="logout_prompt">Logout</string>
    <string name="min_price_prompt">최소가</string>
    <string name="menu_settings">설정</string>

    <string name="confirm_payment">결제완료</string>
    <string name="settings_title_account">계정</string>




    <!-- 공통 -->
    <string name="dialog_ok">확인</string>
    <string name="dialog_cancel">취소</string>

    <!-- 로그인 화면 -->
    <string name="layout_login_companyname">회사명</string>
    <string name="layout_login_staff">임직원</string>
    <string name="layout_login_family">가족회원</string>
    <string name="layout_login_id">ID/사번</string>
    <string name="layout_login_pw">P W</string>
    <string name="layout_login_autologin">자동로그인</string>
    <string name="layout_login_showpw">비밀번호보기</string>
    <string name="layout_login_login">로그인</string>
    <string name="layout_login_kses">한국구독경제서비스(주)</string>
    <string name="layout_login_companyinfo">사업자정보</string>
    <string name="layout_login_private">개인정보처리방침</string>
    <string name="layout_login_terms">이용약관</string>
    <string name="layout_login_notification">공지사항</string>
    <string name="layout_login_faq">FAQ</string>

    <!-- 약관 화면 -->
    <string name="layout_terms_title_agree">약관 동의</string>
    <string name="layout_terms_title_signin">약관 동의 / 가입하기</string>
    <string name="layout_terms_allagree">모두 동의</string>
    <string name="layout_terms_agree">동의</string>
    <string name="layout_terms_disagree">동의 안함</string>
    <string name="layout_terms_agree1">(필수) 개인정보 수집/이용</string>
    <string name="layout_terms_agree2">(필수) 이용약관 동의</string>
    <string name="layout_terms_agree3">(선택) 이벤트 수신 알림 동의</string>
    <string name="layout_terms_signin">회원가입</string>
    <string name="dialog_terms_msg">모두의 구독 서비스에\n가입하시겠습니까?</string>
    <string name="dialog_terms_ok">예</string>
    <string name="dialog_terms_cancel">처음으로</string>

    <!-- 검색& 검색 결과 화면 -->
    <string name="layout_search_result">총 %1$d 개의 상품</string>
</resources>
