<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_item1"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_reorder_24"
        android:title="@string/menu_item_1" />
    <item
        android:id="@+id/nav_item2"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/menu_item_2" />
    <item
        android:id="@+id/nav_item3"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/menu_item_3" />
    <item
        android:id="@+id/nav_item4"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/menu_item_4" />
    <item
        android:id="@+id/nav_item5"
        android:enabled="true"
        android:icon="@drawable/ic_menu_cart_noti"
        android:title="@string/menu_item_5" />
</menu>
