<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_login_logo"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:text="모두의 구독 &amp; EZWEL"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:gravity="center"/>

    <LinearLayout
        android:id="@+id/ll_login_container_ezwel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_login_logo"
        android:orientation="vertical"
        android:padding="20dp"
        android:visibility="visible">
        <EditText
            android:id="@+id/et_login_ezwel_companyname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:hint="@string/layout_login_companyname"
            android:layout_marginBottom="20dp"/>
        <RadioGroup
            android:id="@+id/rg_login_ezwel_staff"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="20dp">
            <RadioButton
                android:id="@+id/rb_login_ezwel_staff"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginRight="10dp"
                android:text="@string/layout_login_staff"/>
            <RadioButton
                android:id="@+id/rb_login_ezwel_family"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:textSize="18sp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:text="@string/layout_login_family"/>
        </RadioGroup>
        <EditText
            android:id="@+id/et_login_ezwel_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:hint="@string/layout_login_id"
            android:layout_marginBottom="20dp"/>
        <EditText
            android:id="@+id/et_login_ezwel_pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:textSize="18sp"
            android:hint="@string/layout_login_pw"
            android:layout_marginBottom="20dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/btn_login_login"
            tools:layout_editor_absoluteX="0dp">
            <CheckBox
                android:id="@+id/ct_login_ezwel_autologin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/layout_login_autologin"
                android:textSize="18sp" />
            <CheckBox
                android:id="@+id/ct_login_ezwel_showpw"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="@string/layout_login_showpw"
                android:textSize="18sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_login_container_btc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_login_logo"
        android:visibility="gone">
        <com.kakao.usermgmt.LoginButton
            android:id="@+id/btn_login_kakao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp" />
        <TextView
            android:id="@+id/btn_login_google"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/selector_btn_google_login"
            android:gravity="center"
            android:text="@string/login_google"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_login_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/ll_login_container_footer"
        android:text="@string/layout_login_login"
        android:textSize="18sp"
        android:textColor="@color/gen_black"
        android:padding="20dp"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_margin="20dp"/>

    <LinearLayout
        android:id="@+id/ll_login_container_footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/tv_login_kses"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_login_kses"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tv_login_companyinfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_login_companyinfo"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:padding="5dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/tv_login_private"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_login_private"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:layout_marginLeft="20dp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tv_login_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_login_terms"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tv_login_notification"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_login_notification"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:padding="5dp"/>
            <TextView
                android:id="@+id/tv_login_faq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/layout_login_faq"
                android:textColor="@android:color/black"
                android:textSize="15sp"
                android:padding="5dp"/>
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

