<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:iconSpaceReserved="false">

    <PreferenceCategory
        android:title="@string/settings_title_account"
        app:iconSpaceReserved="false">

        <SwitchPreference
            android:key="PREF_AUTO_LOGIN"
            android:title="@string/auto_login_prompt"
            android:defaultValue="false"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"/>

        <!--<Preference
            android:key="PREF_LOGOUT"
            android:title="@string/logout_prompt"
            android:dialogTitle="@string/logout_prompt"
            android:defaultValue="false"
            app:allowDividerAbove="true"
            app:allowDividerBelow="true"
            app:iconSpaceReserved="false"/>-->

    </PreferenceCategory>

    <ListPreference
        android:key="PREF_PRICES"
        android:title="@string/min_price_prompt"
        android:summary="@string/min_price_prompt"
        android:entries="@array/price_options"
        android:entryValues="@array/price_values"
        android:dialogTitle="@string/min_price_prompt"
        android:defaultValue="0"
        app:allowDividerAbove="true"
        app:iconSpaceReserved="false"/>
</PreferenceScreen>
