<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp">

    <CheckBox
        android:id="@+id/cb_terms_agreeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/layout_terms_allagree"
        android:layout_margin="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_terms_container_agree1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/cb_terms_agreeall">
        <TextView
            android:id="@+id/tv_terms_title_agree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_terms_agree1"
            android:textSize="14dp"
            android:textColor="@color/gen_black"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/rg_terms_agree1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/cb_terms_agree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_agree"
                android:textSize="14dp"/>
            <RadioButton
                android:id="@+id/cb_terms_disagree1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_disagree"
                android:textSize="14dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_terms_agree1"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fadeScrollbars="false"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:text="약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관"
        android:textColor="@color/gen_black"
        android:textSize="12dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_stroke_1dp"
        app:layout_constraintTop_toBottomOf="@id/ll_terms_container_agree1"/>

    <LinearLayout
        android:id="@+id/ll_terms_container_agree2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_agree1">
        <TextView
            android:id="@+id/tv_terms_title_agree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_terms_agree2"
            android:textSize="14dp"
            android:textColor="@color/gen_black"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/rg_terms_agree2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/cb_terms_agree2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_agree"
                android:textSize="14dp"/>
            <RadioButton
                android:id="@+id/cb_terms_disagree2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_disagree"
                android:textSize="14dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_terms_agree2"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fadeScrollbars="false"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:text="약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관"
        android:textColor="@color/gen_black"
        android:textSize="12dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_stroke_1dp"
        app:layout_constraintTop_toBottomOf="@id/ll_terms_container_agree2"/>

    <LinearLayout
        android:id="@+id/ll_terms_container_agree3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        app:layout_constraintTop_toBottomOf="@id/tv_terms_agree2">
        <TextView
            android:id="@+id/tv_terms_title_agree3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/layout_terms_agree3"
            android:textSize="14dp"
            android:textColor="@color/gen_black"
            android:layout_gravity="center_vertical"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_weight="1"/>
        <RadioGroup
            android:id="@+id/rg_terms_agree3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton
                android:id="@+id/cb_terms_agree3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_agree"
                android:textSize="14dp"/>
            <RadioButton
                android:id="@+id/cb_terms_disagree3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/layout_terms_disagree"
                android:textSize="14dp"/>
        </RadioGroup>
    </LinearLayout>
    <TextView
        android:id="@+id/tv_terms_agree3"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:fadeScrollbars="false"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:text="약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관\n약관"
        android:textColor="@color/gen_black"
        android:textSize="12dp"
        android:layout_margin="10dp"
        android:background="@drawable/border_stroke_1dp"
        app:layout_constraintTop_toBottomOf="@id/ll_terms_container_agree3"/>

    <Button
        android:id="@+id/btn_terms_signin"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/layout_terms_signin"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>